--- a/css/style.css
+++ b/css/style.css
@@ -1,37 +1,122 @@
 
+/*****Inizio regole colore*****/
+:root{
+    --nuove_uscite_bg_color: rgb(31, 31, 31);
+    --PS_plus_bg_color: rgb(190, 188, 187);
+    --PS_now_bg_color: rgb(22, 28, 59);
+    --footer_now_bg_color: rgb(0, 67, 156);
+}
+
+#nuove-uscite{
+    background-color: var(--nuove_uscite_bg_color);
+}
+#PS-plus{
+    background-color: var(--PS_plus_bg_color);
+}
+
+#PS-Now{
+    background-color: var(--PS_now_bg_color);
+}
+
+#Contatti{
+    background-color: var(--footer_now_bg_color);
+}
+
+/*****Fine regole colore*****/
+
+
+ 
+
+
+
+/*******regole custom******/ 
+
+#jambo_bottom{
+    margin: 2rem 0;
+}
+
+
+#sie-logo{
+    height: 50px;
+    width: 50px;
+}
+
+/*******regole custom******/ 
 
 
 
 
 
-.box{
+/******regole di hover******/
 
-height: 100px;
+#menu  .active{
+    outline: solid 2px blue;
+    outline-offset: 5px;
+    
 
-background-color: blueviolet;
 
 }
 
-#menu{
-    background-color: aqua;
-    min-height: 200px;
-}
 
-.container{
+
+
+
+
+
+
+/******regole di hover******/
+
+
+
+
+
+
+
+
+
+
+
+/*
+.jambo_img{
+    background-image: url('../img/it-takes-two-hero-banner-desktop.jpg');
+    background-size: cover;
+    background-position: center;
+    height: 100px;
+    
+}*/
+
+
+
+
+/**** regole debug******/
+.debug.container{
     border: 7px dotted rgb(184, 14, 14);
 }
 
-.col{
+.debug.col{
     border: 2px dotted black;
   
 }
 
+.debug #Contatti{
 
-.Cc_btn{
- border-radius: 1.375rem;
-
+   border: 2px solid blue;
+   margin-top: 100px; 
 }
-.menu_bottom{
+
+.debug .menu_ps5, .menu_ps4{
  border: 3px solid black;
- min-height: 70px;
+
 }
+.debug .box{
+    height: 100px;
+     width: 100px;
+     background-color: rgba(0, 0, 0, 0.541);
+}
+.debug .col{
+    border:3px dotted rgb(158, 15, 15);
+}
+
+
+
+/**** regole debug******/
